read/write to files and optimization(lol(no))

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(counterword)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES main.cpp)
+file(WRITE "cmake-build-debug/config.txt" "infile=\"example.txt\"\nout_by_a=\"res_a.txt\"\nout_by_n=\"res_n.txt\"\nthreads=5")
 add_executable(counterword ${SOURCE_FILES})
